--- a/HTML.html
+++ b/HTML.html
@@ -2,20 +2,24 @@
 <html>
 <head>
 	<title>MOVIEHOLICS MOVIE HOUSE</title>
+	<link rel="stylesheet" href="mamaran.css">
 </head>
 <body>
 
-<img src="MMH.png" width="800px" height="400px">
+<div align="center">
+	<img src="header.png">
+</div>
 
 <nav>
-	<a href="#">Presentation</a><br>
-		<li><a href="HTML2.html">Tags Information</a></li>
-	<a href="#">Studies</a>
-		<li><a href="#">Social Sciences</a></li>
-		<li><a href="#">Engineering</a></li>
-	<a href="#">Staff</a>
+	<ul>
+		<li><a href="#">Presentation</a></li>
+		<li><a href="HTML2.html">Tags Info</a></li>
+		<li><a href="#">Studies</a></li>
+		<li><a href="#">Staff</a></li>
+	</ul>
 </nav>
-<br>
+
+<br><br><br>
 <h1>WELCOME TO MOVIEHOLICS MOVIE HOUSE</h1>
 <br>
 
@@ -24,18 +28,29 @@
 	<h2>What's new?</h2>
 
 	<p>New movies coming up your way, dear movie viewers. Movieholics Movie House is the first Movie House to have its own 5D Virtual Reality experience. So come and enjoy movies here in Movieholics Movie House!</p>
-<aside>
+</aside>
 
 <article>
 	<h2>Movies</h2>
-		<p>Guardians of the Galaxt Vol. 2<br>Justice League</p>
+		<p>
+			Guardians of the Galaxy Vol. 2<br>
+			Justice League<br>
+			Black Panther<br>
+			Avengers: Infinity War<br>
+			Star Wars: The Last Jedi<br>
+		</p>
 </article>
 
 <section>
 	<h2>Series</h2>
-	<p>Marvel's Agents of S.H.I.E.L.D. S05E02<br>The Flash S04E09</p>
+	<p>
+		Marvel's Agents of S.H.I.E.L.D. S05E02<br>
+		The Flash S04E09<br>
+		Arrow S06E09<br>
+		Crisis On Earth-X (Arrow, Flash, Supergirl, Legends of Tomorrow Crossover)<br>
+	</p>
 </section>
-
+<br><br>
 <p>Movieholics Movie House is open from <time>9:00am</time> to <time>12:00am</time> every day.</p>
 <br><br>
 
