--- a/HTML2.html
+++ b/HTML2.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head><title>TAG INFORMATION</title></head>
+<head>
+	<title>TAG INFORMATION</title>
+	<link rel="stylesheet" href="mamaran.css">
+</head>
 
 <body>
 
-<h1>TAG INFORMATION</h1><br><br>
+<h1>TAGS INFORMATION</h1><br><br>
 
 
 <h2>HEADER TAG</h2>
@@ -41,6 +44,10 @@ This element can also be used to encode dates and times in a machine-readable wa
 <h2>FOOTER TAG</h2>
 <p>The "footer" tag defines a footer for a document or section.<br>
 A "footer" element should contain information about its containing element.</p>
+<br><br><br>
+<div align="center">
+	<button><a href="HTML.html">PRESS TO GO BACK</a></button>
+</div>
 
 </body>
 </html>
